# STU-LS

./: .gitignore  PLANNING.md  README.md  package-lock.json  package.json
.github/workflows/: build-macos-dmg.yml  build-windows-installers.yml
apps/desktop/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.js  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_init.sql  0002_academic_extensions.sql  0003_sync_contract.sql  0004_students_table.sql
apps/desktop/src-tauri/src/: main.rs  student_repository.rs  user_repository.rs
apps/desktop/src/lib/: parsers.js  parsers.test.js  parsers.test.ts  parsers.ts
apps/sync-server/: .env.example  package.json
apps/sync-server/apps/sync-server/data/: sync-store.json
apps/sync-server/scripts/: init-supabase-schema.js
apps/sync-server/src/: server.js  server.test.js  store.js
backend-server/: .env.example  package-lock.json  package.json
backend-server/scripts/: apply-migrations.js  check-users-columns.js
backend-server/src/: server.js  server.test.js  store.js
docs/: api-v1.md  architecture.md  deployment.md  release-website-and-updates-quick-guide.md
scripts/: release.ps1  release.sh
supabase/: schema.sql
supabase/migrations/: 20260418_001_sync_schema.sql  20260422_001_student_update_bridge.sql  20260423_002_users_profile_columns.sql
