[package]
name = "stu_ls_desktop"
version = "0.1.0"
description = "STU-LS Desktop Application"
authors = ["STU-LS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
csv = "1.3"
rust_xlsxwriter = "0.79"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri-plugin-process = "2.0.0"
tauri-plugin-updater = "2.0.0"
